smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-unicode-escape3.smithy
// Syntax error at line 4, column 16: Error parsing quoted string: Invalid unclosed unicode escape found in string | Model
namespace smithy.example

@documentation("\uaaa")
string MyString
